--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,12 @@
-{
+module.exports ={
     "env": {
-        "browser": true,
-        "es2021": true
+        "commonjs": true,
+        "es2021": true,
+        "node": true
     },
-    "extends": "eslint:recommended",
+    "extends": ['standard', 'prettier'],
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+        "ecmaVersion": 12
     },
     "rules": {
     }
