--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.4"
+    "nanoid": "^5.0.4",
+    "nodemailer": "^6.9.7"
   }
 }
